<resources>
    <string name="app_name">VocabularyApp</string>
    <string name="need_an_account"><u>Need an account?</u></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="signUp">Signup</string>
    <string name="haveAccount"><u>Already have account?</u></string>
    <string name="memorized">Memorized</string>
    <string name="remindMeLater">Remind me later</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="Logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="search_word">Search word</string>
    <string name="addedList">Added list</string>
    <string name="notMemorized">Not memorized</string>
    <string name="notOnTheList">Not on the list</string>
    <string name="quiz">Quiz   </string>
    <string name="hard_words_your_list">Hard words (Your list)</string>

    <string-array name="categoriesSpinner">
        <item>Quiz"</item>
        <item>Verbs"</item>
        <item>Adverbs"</item>
        <item>Adjectives"</item>
        <item>Phrases and Idioms</item>
    </string-array>

    <string-array name="typesOfTime">
        <item>each 15 minutes</item>
        <item>each 30 minutes</item>
        <item>each 60 minutes</item>
        <item>twice a day</item>
        <item>every day"</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remind_later">remind later</string>
    <string name="confirm">confirm</string>
    <string name="add_new_word">Add new word</string>
    <string name="word">word</string>
    <string name="definition">definition</string>
    <string name="example">example</string>
    <string name="add">Add</string>
</resources>