<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_hard_words"
            android:icon="@drawable/ic_baseline_alarm_24"
            android:title="@string/hard_words_your_list" />

    </group>

    <item
        android:id="@+id/navigation_drawer_item3"
        android:icon="@drawable/ic_baseline_quiz_24"
        app:actionLayout="@layout/spinner"
        />

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:onClick="logOutClicked"
                android:title="@string/Logout" />
        </menu>
    </item>


</menu>