<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vocabularyapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.vocabularyapp.ui.search.SearchFragment"
        android:label="@string/search_word"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_hard_words"
        android:name="com.example.vocabularyapp.ui.hard_words.HardWordsFragment"
        android:label="Hard words"
        tools:layout="@layout/fragment_hard_words" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.vocabularyapp.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>